feat:  降级 io.modelcontextprotocol.spec.McpSchema 到java11 语法，以及解决所有对其依赖的问题